Revert "Revert scrollbar css fix"
This reverts commit a97b31c19fea2a7abceb708694c6da89bc596047.

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -1168,3 +1168,33 @@ $transition-in-between-delay: 0.05s;
 .min-h-100 {
     min-height: 100%;
 }
+
+/*
+Hides the scrollbar, unless the user is currently using the scrollbar
+Note: This class assumes that the scrollbar is already present (e.g. overflow-y and a defined max-height)
+*/
+.hide-scrollbar-unless-scrolling {
+    &::-webkit-scrollbar {
+        width: var(--scrollbar-width);
+        opacity: 0;
+        transition: opacity var(--scrollbar-transition-time);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        width: var(--scrollbar-width);
+        background-color: transparent;
+        border-radius: var(--scrollbar-width);
+        transition: background-color var(--scrollbar-transition-time);
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    /* Show scrollbar on hover/active scrolling */
+    &:hover::-webkit-scrollbar-thumb,
+    &:active::-webkit-scrollbar-thumb {
+        width: var(--scrollbar-width);
+        background-color: var(--scrollbar-color);
+    }
+}
